[package]
name = "ncinfrastructure"
version = "0.1.0"
authors = ["RGBsec <rgbsec@rgbsec.xyz>"]
edition = "2018"
description = "Infrastructure for hosting pwn challenges over TCP."
license = "MIT"
readme = "README.md"


[dependencies]
futures = "0.3.5"
log = "0.4.8"
fern = "0.6.0"
ansi_term = "0.12.1"
chrono = "0.4.11"
clap = "2.33.1"

[dependencies.tokio]
version = "0.2.21"
features = [
  "rt-threaded",
  "macros",
  "net",
  "dns",
  "process",
  "io-util",
  "sync"
]